【add】task1の大枠を作った

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <meta name="author" content="田中暁">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="<%= data.libMockLink %>/sanitize.css">
+<!-- <link rel="stylesheet" type="text/css" href="<%= data.libMockLink %>/sanitize.css"> -->
 <link rel="stylesheet" type="text/css" href="<%= data.cssCmnMockLink %>">
 <title>Y's Must Lv1</title>
 </head>
