--- a/src/css/task1.css
+++ b/src/css/task1.css
@@ -1,15 +1,71 @@
 @charset "utf-8";
-
-dl {
+body {
+    color: #222;
+}
+main {
+    max-width: 800px;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+dl#task1_form-dl {
     width: 100%;
-    display: -ms-flex;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
+    font-size: 0;
+}
+dt, dd {
+    display: inline-block;
+    font-size: 1rem;
+    height: 100px;
+    position: relative;
 }
 dt {
     width: 20%;
+    text-align: right;
+    line-height: 100px;
+}
+dt > span {
+    border: 3px solid #222;
+    padding: 5px 15px;
 }
 dd {
-    width: 80%
+    vertical-align: top;
+    width: 70%;
+    padding: 10px 10px;
+    margin-bottom: 30px;
+}
+dd > h2 {
+    font-size: 1em;
+    position: absolute;
+    top: -15px;
+    left: 10px;
+}
+#task1_form-dl .task1_form-dd-2 {
+    line-height: 80px;
+}
+#task1_form-dl .task1_form-dd-4 {
+    line-height: 80px;
+    margin-bottom: 0;
+}
+#input-user, #input-password, #input-login {
+    width: 100%;
+    height: 100%;
+    font-size: 1.5em;
+    border-radius: 10px;
+    border-style: groove;
+    box-shadow: 1px 1px 2px 0 #222;
+}
+#input-login {
+    -webkit-appearance: button;
+    background-color: #ECD11B;
+    cursor: pointer;
+}
+#input-login:focus {
+    outline: 0;
+    border: none;
+    box-shadow: none;
+    transition: all 0.1s;
+    transform: translate(3px, 3px);
+}
+#login-input:active {
+    border: none;
+    box-shadow: none;
 }
