【add】課題２の大枠のレイアウト作成

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -42,6 +42,14 @@ footer small {
   bottom: 30px;
   right: 30px;
 }
+.required-label {
+  display: inline-block;
+  font-size: 12px;
+  padding: 0 5px;
+  background-color: #f00;
+  color: #fff;
+}
+/* mockList */
 .my-name {
   text-align: right;
 }
