--- a/src/css/task2.css
+++ b/src/css/task2.css
@@ -1,4 +1,7 @@
 @charset "utf-8";
+body {
+    background-color: #fff;
+}
 main {
     width: 1000px;
     margin: 0 auto;
@@ -7,16 +10,58 @@ main {
 #task2_logo > img {
     width: 300px;
 }
-table th {
+#task2_form table {
+    margin-top: 30px;
+    border-collapse: collapse;
+}
+#task2_form table > caption {
+    border: 1px solid #222;
+    border-bottom: none;
+    background-color: #ccc;
+}
+#task2_form table > caption h3 {
+    text-align: left;
+    padding: 20px 30px;
+}
+#task2_form th {
     width: 30%;
     padding: 30px;
+    text-align: left;
+    position: relative;
 }
-table td {
+#task2_form th.required {
+    background-color: rgba(255, 0, 100, 0.3);
+}
+#task2_form th .required-label {
+    width: 40px;
+    height: 20px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 20px;
+    margin: auto;
+}
+#task2_form td {
     padding-left: 30px;
-}
-table label {
     font-size: 12px;
 }
-table span.block {
+#task2_form td > span {
+    margin-right: 10px;
+}
+#task2_form td input[type="radio"] {
+    margin-right: 2px;
+}
+#task2_piano-info-table-01 .td-6 > span {
     display: block;
+}
+#task2_startBtnArea {
+    text-align: center;
+    margin: 30px 0;
+}
+#task2_startBtnArea small {
+    display: block;
+}
+#task2_startBtnArea #startBtn {
+    width: 500px;
 }
