【fix】共通のモジュールを修正

--- a/src/ejs/base.ejs
+++ b/src/ejs/base.ejs
@@ -12,11 +12,13 @@
 <% } %>
 <% if (parts === 'header') { %>
 <header>
-  <h1><%= page.taskName %></h1>
-  <p>田中暁</p>
+    <h1><%= page.taskName %></h1>
+    <p>田中暁</p>
 </header>
 <% } %>
 <% if (parts === 'footer') { %>
 <footer>
+    <p>林さん監修の HTML/CSS Must Lv1 のモックです。</p>
+    <small id="copy-ys">&copy; 2017 Y's</small>
 </footer>
 <% } %>
