--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -24,9 +24,6 @@
     <% }); %>
   </dl>
 </main>
-<footer>
-  <p>林さん監修の HTML/CSS Must Lv1 のモックです。</p>
-  <small>&copy; 2017 Y's</small>
-</footer>
+<%- include('base.ejs', {parts: 'footer'}) %>
 </body>
 </html>
