--- a/src/css/common.css
+++ b/src/css/common.css
@@ -12,6 +12,7 @@ body {
   height: 100%;
   background-color: #ccc;
   color: #222;
+  font-family: 'Meiryo', 'メイリオ', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', 'helvetica', 'arial', sans-serif;
 }
 header, main, footer {
   padding: 30px;
@@ -37,10 +38,11 @@ a:link {
 a:hover {
   opacity: 0.5;
 }
-footer small {
+#copy-ys {
   position: absolute;
   bottom: 30px;
   right: 30px;
+  font-weight: bold;
 }
 .required-label {
   display: inline-block;
