--- a/src/ejs/base.ejs
+++ b/src/ejs/base.ejs
@@ -17,7 +17,7 @@
 </header>
 <% } %>
 <% if (parts === 'footer') { %>
-<footer>
+<footer id="cmn-footer">
     <p>林さん監修の HTML/CSS Must Lv1 のモックです。</p>
     <small id="copy-ys">&copy; 2017 Y's</small>
 </footer>
