--- a/src/css/common.css
+++ b/src/css/common.css
@@ -22,7 +22,7 @@ header {
   color: #fff;
   background-color: #222;
 }
-footer {
+footer#cmn-footer {
   position: relative;
   color: #fff;
   background-color: #222;
