--- a/src/ejs/task5/index.ejs
+++ b/src/ejs/task5/index.ejs
@@ -7,25 +7,25 @@ var table = [
         td: [
             {
                 entry: '給与 夫(毎月25日)',
-                value: 315908,
+                value: '315,908',
                 payee: '住信SBI',
                 payDate: '5/23'
             },
             {
                 entry: '給与 妻(毎月25日)',
-                value: 173099,
+                value: '173,099',
                 payee: '住信SBI',
                 payDate: '5/23'
             },
             {
                 entry: '副収入',
-                value: 15000,
+                value: '15,000',
                 payee: '楽天銀行',
                 payDate: '5/23'
             },
             {
                 entry: '賞与 夫',
-                value: 590000,
+                value: '590,000',
                 payee: '楽天銀行',
                 payDate: '6/10'
             },
@@ -37,9 +37,9 @@ var table = [
             },
             {
                 entry: '収入合計',
-                value: 1094997,
-                payee: '',
-                payDate: ''
+                value: '1,094,997',
+                payee: '　',
+                payDate: '　'
             }
         ]
     },
@@ -48,25 +48,25 @@ var table = [
         td: [
             {
                 entry: 'セブン投信',
-                value: 25000,
+                value: '25,000',
                 payee: '三菱東京',
                 payDate: '6/4'
             },
             {
                 entry: 'ひふみ投信',
-                value: 25000,
+                value: '25,000',
                 payee: '三菱東京',
                 payDate: '6/4'
             },
             {
                 entry: '給料日貯蓄額',
-                value: 100316,
+                value: '100,316',
                 payee: '住信SBI',
                 payDate: '5/25'
             },
             {
                 entry: '賞与貯蓄額',
-                value: 590000,
+                value: '590,000',
                 payee: '住信SBI',
                 payDate: '6/10'
             },
@@ -78,7 +78,7 @@ var table = [
             },
             {
                 entry: '総貯蓄額',
-                value: 740316,
+                value: '740,316',
                 payee: '',
                 payDate: ''
             }
@@ -89,91 +89,91 @@ var table = [
         td: [
             {
                 entry: '電気代(3/19〜4/17)',
-                value: 15000,
+                value: '15,000',
                 payee: '住信SBI',
                 payDate: '5/27'
             },
             {
                 entry: '水道代(2/4〜4/1)',
-                value: 10000,
+                value: '10,000',
                 payee: '住信SBI',
                 payDate: '5/27'
             },
             {
                 entry: 'ガス代(3/11〜4/10)',
-                value: 13000,
+                value: '13,000',
                 payee: '住信SBI',
                 payDate: '5/27'
             },
             {
                 entry: '携帯代(3月分)',
-                value: 5027,
+                value: '5,027',
                 payee: '住信SBI',
                 payDate: '5/27'
             },
             {
                 entry: '生活費(4月分)',
-                value: 115879,
+                value: '115,879',
                 payee: '住信SBI',
                 payDate: '5/27'
             },
             {
                 entry: 'nanacoチャージ費(4月分)',
-                value: 15000,
+                value: '15,000',
                 payee: '住信SBI',
                 payDate: '5/27'
             },
             {
                 entry: '交通費(4月分)',
-                value: 14516,
+                value: '14,516',
                 payee: '住信SBI',
                 payDate: '5/27'
             },
             {
                 entry: 'カード払い計',
-                value: 188422,
+                value: '188,422',
                 payee: '',
                 payDate: ''
             },
             {
                 entry: '住宅ローン(6月分)',
-                value: 77419,
+                value: '77,419',
                 payee: '三菱東京',
                 payDate: '5/26'
             },
             {
                 entry: '管理・修繕費(6月分)',
-                value: 33270,
+                value: '33,270',
                 payee: '三菱東京',
                 payDate: '5/27'
             },
             {
                 entry: '学童費(毎月月末)',
-                value: 6000,
+                value: '6,000',
                 payee: '三菱東京',
                 payDate: '6/1'
             },
             {
                 entry: '保育園代(毎月月末)',
-                value: 20020,
+                value: '20,020',
                 payee: '三菱東京',
                 payDate: '6/1'
             },
             {
                 entry: '給食費(毎月20日)',
-                value: 3560,
+                value: '3,560',
                 payee: 'ゆうちょ銀行',
                 payDate: '6/20'
             },
             {
                 entry: '小遣い費(夫)',
-                value: 25000,
+                value: '25,000',
                 payee: '住信SBI',
                 payDate: '5/25'
             },
             {
                 entry: '小遣い費(妻)',
-                value: 0,
+                value: '0',
                 payee: '住信SBI',
                 payDate: '5/25'
             },
@@ -185,9 +185,9 @@ var table = [
             },
             {
                 entry: '支出合計',
-                value: 353691,
-                payee: '',
-                payDate: ''
+                value: '353,691',
+                payee: '　',
+                payDate: '　'
             }
         ]
     },
@@ -196,105 +196,105 @@ var table = [
         td: [
             {
                 entry: '食費',
-                value: 45000,
-                budget: 50000,
-                balance: 5000
+                value: '45,000',
+                budget: '50,000',
+                balance: '5,000'
             },
             {
                 entry: '日用品費',
-                value: 9480,
-                budget: 10000,
+                value: '9,480',
+                budget: '10,000',
                 balance: 520
             },
             {
                 entry: 'レジャー&外食費',
-                value: 11251,
-                budget: 10000,
-                balance: -1251
+                value: '11,251',
+                budget: '10,000',
+                balance: '-1,251'
             },
             {
                 entry: '交通費',
-                value: 9500,
-                budget: 10000,
+                value: '9,500',
+                budget: '10,000',
                 balance: 500
             },
             {
                 entry: '教育費',
-                value: 8500,
-                budget: 10000,
-                balance: 1500
+                value: '8,500',
+                budget: '10,000',
+                balance: '1,500'
             },
             {
                 entry: '医療費',
-                value: 4500,
-                budget: 5000,
+                value: '4,500',
+                budget: '5,000',
                 balance: 500
             },
             {
                 entry: '被服費',
-                value: 6689,
-                budget: 5000,
-                balance: -1689
+                value: '6,689',
+                budget: '5,000',
+                balance: '-1,689'
             },
             {
                 entry: '美容費',
-                value: 2800,
-                budget: 5000,
-                balance: 2200
+                value: '2,800',
+                budget: '5,000',
+                balance: '2,200'
             },
             {
                 entry: 'その他',
-                value: 3500,
-                budget: 5000,
-                balance: 1500
+                value: '3,500',
+                budget: '5,000',
+                balance: '1,500'
             },
             {
                 entry: 'お小遣い',
-                value: 3000,
-                budget: 10000,
-                balance: 7000
+                value: '3,000',
+                budget: '10,000',
+                balance: '7,000'
             },
             {
                 entry: '特別費',
-                value: 4500,
-                budget: 10000,
-                balance: 5500
+                value: '4,500',
+                budget: '10,000',
+                balance: '5,500'
             },
             {
                 entry: '',
                 value: '',
-                payee: '',
-                payDate: ''
+                budget: '',
+                balance: ''
             },
             {
                 entry: '',
                 value: '',
-                payee: '',
-                payDate: ''
+                budget: '',
+                balance: ''
             },
             {
                 entry: '',
                 value: '',
-                payee: '',
-                payDate: ''
+                budget: '',
+                balance: ''
             },
             {
                 entry: '',
                 value: '',
-                payee: '',
-                payDate: ''
+                budget: '',
+                balance: ''
             },
             {
                 entry: '',
                 value: '',
-                payee: '',
-                payDate: ''
+                budget: '',
+                balance: ''
             },
             {
                 entry: '生活費計',
-                value: 108720,
-                payee: '',
-                payDate: ''
+                value: '108,720',
+                budget: '130,000',
+                balance: '21,280'
             }
         ]
     }
@@ -305,8 +305,8 @@ var table = [
 <%- include('../base.ejs', {parts: 'head', page: {taskName: taskName, cssName: cssName}}) %>
 <body>
 <%- include('../base.ejs', {parts: 'header', page: {taskName: taskName}}) %>
-<main>
-    <section id="task5_wrap">
+<main id="task5">
+    <section id="task5_article-wrap">
         <h2>2014年6月</h2>
         <article>
             <div class="table-wrap">
@@ -314,47 +314,47 @@ var table = [
             <% if (tbodyIndex === 2) { %>
             <div class="table-wrap">
             <% } %>
-            <table id="task5_table-<%= tbodyIndex %>" cellspacing="0">
-                <caption><%= tbody.title %></caption>
-                <tbody>
-                    <% if (tbodyIndex === 3) { %>
-                    <tr>
-                        <th>項目</th>
-                        <th>金額</th>
-                        <th>予算</th>
-                        <th>残り</th>
-                    </tr>
-                    <% tbody.td.forEach(function (tRow, tRowIndex) { %>
-                    <tr>
-                        <td><% if (tRow.entry) { %><%= tRow.entry %><% } else { %>&nbsp;<% } %></td>
-                        <td><% if (tRow.value) { %><%= tRow.value %><% } else { %>&nbsp;<% } %></td>
-                        <td><% if (tRow.budget) { %><%= tRow.budget %><% } else { %>&nbsp;<% } %></td>
-                        <td><% if (tRow.balance) { %><%= tRow.balance %><% } else { %>&nbsp;<% } %></td>
-                    </tr>
-                    <% }); %>
-                    <% } else { %>
-                    <tr>
-                        <th>項目</th>
-                        <th>金額</th>
-                        <th>支払先</th>
-                        <th>支払日</th>
-                    </tr>
-                    <% tbody.td.forEach(function (tRow, tRowIndex) { %>
-                    <tr>
-                        <td><% if (tRow.entry) { %><%= tRow.entry %><% } else { %>&nbsp;<% } %></td>
-                        <td><% if (tRow.value) { %><%= tRow.value %><% } else { %>&nbsp;<% } %></td>
-                        <td><% if (tRow.budget) { %><%= tRow.budget %><% } else { %>&nbsp;<% } %></td>
-                        <td><% if (tRow.balance) { %><%= tRow.balance %><% } else { %>&nbsp;<% } %></td>
-                    </tr>
-                    <% }); %>
-                    <% } %>
-                </tbody>
-            </table>
+                <table id="task5_table-<%= tbodyIndex %>" cellspacing="0">
+                    <caption><%= tbody.title %></caption>
+                    <tbody>
+                        <% if (tbodyIndex === 3) { %>
+                        <tr>
+                            <th>項目</th>
+                            <th>金額</th>
+                            <th>予算</th>
+                            <th>残り</th>
+                        </tr>
+                        <% tbody.td.forEach(function (tRow, tRowIndex) { %>
+                        <tr>
+                            <td style="<% if (!tRow.entry) { %>background-color: #fff;<% } %>"><% if (tRow.entry) { %><%= tRow.entry %><% } else { %>&nbsp;<% } %></td>
+                            <td style="<% if (!tRow.value) { %>background-color: #fff;<% } %>"><% if (tRow.value) { %><%= tRow.value %><% } else { %>&nbsp;<% } %></td>
+                            <td style="<% if (!tRow.budget) { %>background-color: #fff;<% } %>"><% if (tRow.budget) { %><%= tRow.budget %><% } else { %>&nbsp;<% } %></td>
+                            <td style="<% if (!tRow.balance) { %>background-color: #fff;<% } %>"><% if (tRow.balance) { %><%= tRow.balance %><% } else { %>&nbsp;<% } %></td>
+                        </tr>
+                        <% }); %>
+                        <% } else { %>
+                        <tr>
+                            <th>項目</th>
+                            <th>金額</th>
+                            <th>支払先</th>
+                            <th>支払日</th>
+                        </tr>
+                        <% tbody.td.forEach(function (tRow, tRowIndex) { %>
+                        <tr>
+                            <td style="<% if (!tRow.entry) { %>background-color: #fff;<% } %>"><% if (tRow.entry) { %><%= tRow.entry %><% } else { %>&nbsp;<% } %></td>
+                            <td style="<% if (!tRow.value) { %>background-color: #fff;<% } %>"><% if (tRow.value) { %><%= tRow.value %><% } else { %>&nbsp;<% } %></td>
+                            <td style="<% if (!tRow.payee) { %>background-color: #fff;<% } %>"><% if (tRow.payee) { %><%= tRow.payee %><% } else { %>&nbsp;<% } %></td>
+                            <td style="<% if (!tRow.payDate) { %>background-color: #fff;<% } %>"><% if (tRow.payDate) { %><%= tRow.payDate %><% } else { %>&nbsp;<% } %></td>
+                        </tr>
+                        <% }); %>
+                        <% } %>
+                    </tbody>
+                </table>
             <% if (tbodyIndex === 1) { %>
             </div>
             <% } %>
             <% }); %>
-        </div>
+            </div>
         </article>
     </section>
     <nav>
