--- a/src/css/task.css
+++ b/src/css/task.css
@@ -59,3 +59,13 @@
     font-size: 1rem;
     vertical-align: top;
 }
+
+/* 04 */
+#task_04-01 button {
+    padding: 5px;
+}
+
+/* 05 */
+#task_05-01 button {
+    padding: 5px;
+}
