--- a/src/css/task.css
+++ b/src/css/task.css
@@ -85,3 +85,10 @@
     display: block;
     padding: 5px 0;
 }
+
+/* 07 */
+#task_07-01 #map {
+    width: 500px;
+    height: 500px;
+    margin-top: 20px;
+}
